2010-08-27  Kimmo Kinnunen  <kimmo.t.kinnunen@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] NPAPI Plugin metadata should be cached, and loading a plugin should not require loading every plugin
        https://bugs.webkit.org/show_bug.cgi?id=43179

        Add ENABLE_NETSCAPE_PLUGIN_METADATA_CACHE flag to enable persistent
        NPAPI Plugin Cache. The flag is enabled by default.

        * wtf/Platform.h: Add ENABLE_NETSCAPE_PLUGIN_METADATA_CACHE

2010-07-27  Jer Noble  <jer.noble@apple.com>

        Reviewed by Eric Carlson.

        Add JavaScript API to allow a page to go fullscreen.
        rdar://problem/6867795
        https://bugs.webkit.org/show_bug.cgi?id=43099

        * wtf/Platform.h: Enable FULLSCREEN_API mode for the Mac (except iOS).

2010-08-27  Gavin Barraclough  <barraclough@apple.com>

        Windows build fix pt 2.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2010-08-27  Gavin Barraclough  <barraclough@apple.com>

        Windows build fix pt 1.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2010-08-27  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Bug 44745 - Number.toFixed/toExponential/toPrecision are inaccurate.

        These methods should be using a version of dtoa that can generate results accurate
        to the requested precision, whereas our version of dtoa is only currently able to
        support producing results sufficiently accurate to distinguish the value from any
        other IEEE-754 double precision number.

        This change has no impact on benchmarks we track.

        On microbenchmarks for these functions, this is a slight regression where a high
        precision is requested (dtoa now need to iterate further to generate a a greater
        number of digits), but with smaller precision values (hopefully more common) this